set max-height with overflow for card view images to prevent super long images from destroying the layout

--- a/public/css/dietlah.css
+++ b/public/css/dietlah.css
@@ -259,6 +259,12 @@ height: 48px !important; /* fix for search in navbar on chrome */
   cursor: pointer;
 }
 
+.card-image {
+  max-height: 350px;
+  width: auto;
+  overflow: hidden;
+}
+
 .card-action {
   height: 50px;
 }
